<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayoutOfSleepTimer_containerId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bar_bottom_sheet_icon" />

        <TextView
            android:text="@string/bottomSheetLayoutSleepTimer_Stop_music_after"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/kollektif"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/min_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/timer_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/bottomSheetLayoutSleepTimer_5minutes"
                android:textColor="@color/white"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/timer_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/bottomSheetLayoutSleepTimer_15minutes"
                android:textColor="@color/white"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/timer_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/bottomSheetLayoutSleepTimer_30_minutes"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/_1hour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/timer_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/bottomSheetLayoutSleepTimer_1_hour"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>