<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlistFragment_linearLayoutRootId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primaryColor_ofApp"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/redColor_ofApp"
            android:id="@+id/playlistFragment_toolBar_relativeLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/playlistFragment_toolBarId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                app:popupTheme="@style/Theme.MaterialComponents.Light"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/styleOfToolbar"
                app:titleTextColor="@color/white" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistFragment_recyclerViewId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/playlistFragment_toolBar_relativeLayoutId"
            />

        <LinearLayout
            android:id="@+id/playlistFragment_instructionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/add_to_playlist_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/playlistFragment_No_playlists_found"
                android:textColor="#F0F3F8"
                android:textSize="19dp" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/playlistFragment_Tap"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/add_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/playlistFragment_to_Start_Playlist_Journey"
                android:textColor="#BEBEBE"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/playlistFragment_addPlaylistBtnId"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/redColor_ofApp"
            app:cardCornerRadius="7dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/add_icon" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>