<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetLayoutOfSongDetails_container"
    android:layout_width="match_parent"
    android:background="@color/color_of_dialog"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/songDetails_relativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/songDetails_imageId"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/music_icon_for_song" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_effects_for_dialog" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/songDetails_relativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/bottomSheetLayoutOfSongDetails_Title"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/songDetails_titleId"
                    android:textSize="16sp"
                    android:textColor="@color/dark_secondColorOfApp"
                    android:text="Details"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/bottomSheetLayoutOfSongDetails_Album"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/songDetails_albumId"
                    android:textSize="16sp"
                    android:textColor="@color/dark_secondColorOfApp"
                    android:text="Details"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/bottomSheetLayoutOfSongDetails_Artist"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/songDetails_artistId"
                    android:textSize="16sp"
                    android:textColor="@color/dark_secondColorOfApp"
                    android:text="Details"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/bottomSheetLayoutOfSongDetails_Duration"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/songDetails_durationId"
                    android:textSize="16sp"
                    android:textColor="@color/dark_secondColorOfApp"
                    android:text="Details"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/bottomSheetLayoutOfSongDetails_Location"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/songDetails_locationId"
                    android:textSize="16sp"
                    android:textColor="@color/dark_secondColorOfApp"
                    android:text="Details"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>